--- a/TheGreatestScheduleEverScheduled/WebContent/style.css
+++ b/TheGreatestScheduleEverScheduled/WebContent/style.css
@@ -24,11 +24,25 @@
     text-decoration: none;
 }
 
+.login {
+    width: 100px;
+    height: 100px;
+    background-color: red;
+	margin-left: auto; 
+	margin-right: auto;
+    position: absolute;
+    top:0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
+    margin: auto;
+}
+
 
 /* Main content */
 .main {
     margin-top: 50px; /* Add a top margin to avoid content overlay */
-    
 }
 
 body {
