--- a/TheGreatestScheduleEverScheduled/WebContent/style.css
+++ b/TheGreatestScheduleEverScheduled/WebContent/style.css
@@ -8,7 +8,7 @@
 
 /* Links inside the navbar */
 .navbar a {
-    float: left;
+    float: right;
     display: block;
     color: #f2f2f2;
     text-align: center;
@@ -24,7 +24,8 @@
     text-decoration: none;
 }
 
-.login {
+
+.center {
     width: 100px;
     height: 100px;
 	margin-left: auto; 
@@ -34,8 +35,11 @@
     bottom: 0;
     left: 0;
     right: 0;
-
     margin: auto;
+}
+
+.error{
+	color:red;
 }
 
 
