Update availabilities has table view

--- a/TheGreatestScheduleEverScheduled/WebContent/style.css
+++ b/TheGreatestScheduleEverScheduled/WebContent/style.css
@@ -62,6 +62,9 @@ table, th {
     border: 1px solid black;
     border-collapse: collapse;
 }
+td {
+	text-align:center;
+}
 
 .available{
 	background-color: green;
